--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.1.1",
     "prism-react-renderer": "^1.3.3",
+    "prismjs": "^1.29.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.0.1",
     "@tsconfig/docusaurus": "^1.0.5",
+    "babel-plugin-prismjs": "^2.1.0",
     "typescript": "^4.6.4"
   },
   "browserslist": {
