--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "docusaurus build",
     "build-analyze": "docusaurus build --bundle-analyzer true",
     "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy",
+    "deploy": "cross-env GIT_USER=dhbalaji docusaurus deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve --port 3001",
     "write-translations": "docusaurus write-translations",
@@ -29,6 +29,7 @@
     "@docusaurus/module-type-aliases": "^2.0.1",
     "@tsconfig/docusaurus": "^1.0.5",
     "babel-plugin-prismjs": "^2.1.0",
+    "cross-env": "^7.0.3",
     "typescript": "^4.6.4"
   },
   "browserslist": {
