--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,6 @@ on:
       - main
     paths:
       - '.github/workflows/deploy.yml'
-      - ''
   pull_request:
 
 jobs:
@@ -18,7 +17,7 @@ jobs:
       group: ${{ github.workflow }}-${{ github.ref }}
     defaults:
       run:
-        working-directory: ''
+        working-directory: './'
     steps:
       - uses: actions/checkout@v3
 
