--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,7 +20,7 @@
   ],
   // Use 'postCreateCommand' to run commands after the container is created.
   "postAttachCommand": {
-    "server": "npm start",
+    "server": "npm start"
   },
   "portsAttributes": {
     "3000": {
