--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "name": "Node.js",
+  "name": "dhbalaji-blog",
   "image": "mcr.microsoft.com/devcontainers/javascript-node:18",
   "features": {
     "ghcr.io/devcontainers/features/github-cli:1": {}
@@ -12,19 +12,13 @@
     "isudox.vscode-jetbrains-keybindings",
     "esbenp.prettier-vscode"
   ],
-  // Features to add to the dev container. More info: https://containers.dev/features.
-  // "features": {},
-  // Use 'forwardPorts' to make a list of ports inside the container available locally.
-  "forwardPorts": [
-    3000
-  ],
   // Use 'postCreateCommand' to run commands after the container is created.
   "postAttachCommand": {
     "server": "npm start"
   },
   "portsAttributes": {
     "3000": {
-      "label": "Application",
+      "label": "Blog",
       "onAutoForward": "openPreview"
     }
   },
@@ -33,8 +27,4 @@
     "memory": "8gb",
     "storage": "8gb"
   }
-  // Configure tool-specific properties.
-  // "customizations": {},
-  // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-  // "remoteUser": "root"
 }
