--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,8 @@
   "extends": "@tsconfig/docusaurus/tsconfig.json",
   "compilerOptions": {
     "baseUrl": "."
-  }
+  },
+  "include": [
+    "sass.d.ts"
+  ]
 }
