--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@docusaurus/core": "^2.4.0",
     "@docusaurus/plugin-google-gtag": "^2.2.0",
+    "@docusaurus/plugin-ideal-image": "^2.4.0",
     "@docusaurus/preset-classic": "^2.4.0",
     "@mdx-js/react": "^1.6.22",
     "classnames": "^2.3.2",
@@ -32,6 +33,8 @@
     "@tsconfig/docusaurus": "^1.0.5",
     "babel-plugin-prismjs": "^2.1.0",
     "cross-env": "^7.0.3",
+    "docusaurus-plugin-sass": "^0.2.3",
+    "sass": "^1.62.1",
     "typescript": "^4.9.4"
   },
   "browserslist": {
