--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mdx-js/react": "^1.6.22",
     "classnames": "^2.3.2",
     "clsx": "^1.1.1",
+    "husky": "^8.0.3",
     "prism-react-renderer": "^1.3.3",
     "prismjs": "^1.29.0",
     "react": "^17.0.2",
@@ -48,5 +49,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run build"
+    }
   }
 }
