--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "preinstall1": "npx only-allow pnpm",
+    "preinstall": "npx only-allow pnpm",
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
     "build": "docusaurus build",
@@ -18,27 +18,27 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@docusaurus/core": "^3.1.0",
-    "@docusaurus/plugin-google-gtag": "^3.1.0",
-    "@docusaurus/plugin-ideal-image": "^3.1.0",
-    "@docusaurus/preset-classic": "^3.1.0",
-    "@mdx-js/react": "^3.0.0",
+    "@docusaurus/core": "^3.3.2",
+    "@docusaurus/plugin-google-gtag": "^3.3.2",
+    "@docusaurus/plugin-ideal-image": "^3.3.2",
+    "@docusaurus/preset-classic": "^3.3.2",
+    "@mdx-js/react": "^3.0.1",
     "classnames": "^2.5.1",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "husky": "^8.0.3",
     "prism-react-renderer": "^2.3.1",
     "prismjs": "^1.29.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^3.1.0",
-    "@tsconfig/docusaurus": "^2.0.2",
+    "@docusaurus/module-type-aliases": "^3.3.2",
+    "@tsconfig/docusaurus": "^2.0.3",
     "babel-plugin-prismjs": "^2.1.0",
     "cross-env": "^7.0.3",
     "docusaurus-plugin-sass": "^0.2.5",
-    "sass": "^1.69.7",
-    "typescript": "^5.3.3"
+    "sass": "^1.76.0",
+    "typescript": "^5.4.5"
   },
   "browserslist": {
     "production": [
