--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "dependencies": {
     "@docusaurus/core": "^3.3.2",
@@ -25,7 +25,7 @@
     "@mdx-js/react": "^3.0.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
-    "husky": "^8.0.3",
+    "husky": "^9.0.11",
     "prism-react-renderer": "^2.3.1",
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
