--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,10 +18,16 @@ jobs:
       - name: Check out repo
         uses: actions/checkout@v2
       # Node is required for npm
-      - name: Set up Node
-        uses: actions/setup-node@v2
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
         with:
-          node-version: "18"
+          version: 7
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 21
+          cache: pnpm
       # Install and build Docusaurus website
       - name: Build Docusaurus website
         run: |
