--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "docusaurus": "docusaurus",
-    "start": "docusaurus start",
+    "dev": "docusaurus start",
     "build": "docusaurus build",
     "build-analyze": "docusaurus build --bundle-analyzer true",
     "swizzle": "docusaurus swizzle",
