--- a/package.json
+++ b/package.json
@@ -56,5 +56,8 @@
     "hooks": {
       "pre-commit": "npm run build"
     }
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": ["sharp", "core-js", "core-js-pure"]
   }
 }
