--- a/package.json
+++ b/package.json
@@ -18,27 +18,27 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@docusaurus/core": "^3.6.0",
-    "@docusaurus/plugin-google-gtag": "^3.6.0",
-    "@docusaurus/plugin-ideal-image": "^3.6.0",
-    "@docusaurus/preset-classic": "^3.6.0",
+    "@docusaurus/core": "^3.7.0",
+    "@docusaurus/plugin-google-gtag": "^3.7.0",
+    "@docusaurus/plugin-ideal-image": "^3.7.0",
+    "@docusaurus/preset-classic": "^3.7.0",
     "@mdx-js/react": "^3.1.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
-    "husky": "^9.1.4",
-    "prism-react-renderer": "^2.4.0",
-    "prismjs": "^1.29.0",
+    "husky": "^9.1.7",
+    "prism-react-renderer": "^2.4.1",
+    "prismjs": "^1.30.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^3.6.0",
+    "@docusaurus/module-type-aliases": "^3.7.0",
     "@tsconfig/docusaurus": "^2.0.3",
     "babel-plugin-prismjs": "^2.1.0",
     "cross-env": "^7.0.3",
-    "docusaurus-plugin-sass": "^0.2.5",
-    "sass": "^1.77.8",
-    "typescript": "^5.5.4"
+    "docusaurus-plugin-sass": "^0.2.6",
+    "sass": "^1.86.0",
+    "typescript": "^5.8.2"
   },
   "browserslist": {
     "production": [
@@ -58,6 +58,11 @@
     }
   },
   "pnpm": {
-    "onlyBuiltDependencies": ["sharp", "core-js", "core-js-pure"]
+    "onlyBuiltDependencies": [
+      "sharp",
+      "core-js",
+      "core-js-pure",
+      "@parcel/watcher"
+    ]
   }
 }
