--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-plugin-prismjs": "^2.1.0",
     "cross-env": "^7.0.3",
     "docusaurus-plugin-sass": "^0.2.6",
+    "mcp-hello-world": "^1.1.2",
     "sass": "^1.93.2",
     "typescript": "^5.9.3"
   },
