--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@ yarn-error.log*
 .idea
 
 .pnpm-store
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
